# flightGrid_for_algo

./: .gitignore  ALGO_RUN.md  README.md  algo_run.py
backend/: algorithm_catalog.py  requirements.txt  scene_dispatch_runner.py
backend/algorithms/: algo_plugins.json  base.py  discovery.py  plugin_loader.py  registry.py
backend/algorithms/core/: engine.py
backend/algorithms/path_planning/: a_star.py  dijkstra.py  direct_safe.py  geometric_heuristic.py  orthogonal_safe.py  ovs_core.py  ovs_geometry.py  ovs_planner.py  weighted_a_star.py
backend/algorithms/scheduling/: lmta.py  two_level_scheduler.py
backend/algorithms/scheduling/clustering/: kmeans.py
backend/algorithms/scheduling/greedy/: capacity_first.py  distance_first.py  nearest_neighbor.py
backend/algorithms/scheduling/optimization/: insertion.py  milp_alns_impl.py  ortools_vrp.py
backend/algorithms/scheduling/scalable/: balanced_kmeans.py  fast_greedy.py  hybrid_large_scale.py  sector_sweep.py
backend/algorithms/utils/: collision_analyzer.py  cpp_bridge.py  depot_manager.py  environment.py  environment_graph.py  heatmap_analyzer.py  time_expanded_network.py
backend/config/: algorithm_config.yaml  config_manager.py  settings.py
backend/cpp_engine/: CMakeLists.txt  distance_calculator.cpp
backend/models/: algorithm_api.py  domain.py
backend/routing/: __init__.py  cache.py  oracle.py  types.py
data/: 100-300(no zhangai).json  100-300.json  50-120.json  simple.json
